--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "promistein",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "bramstein/promis (minified version) for nodejs and browser. Packaged for benchmarks. It supports the full Promise API specification.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/promises-aplus-tests ./adapter.js"
+    "test": "npm install && ./node_modules/.bin/promises-aplus-tests ./adapter.js"
   },
   "author": {
     "name": "Charlike Make Reagent",
